Payment information dives into specifics.

--- a/Week 4 - Introduction to Object Oriented Programming/4.5 Critical Thinking - Pizza Takeout.md
+++ b/Week 4 - Introduction to Object Oriented Programming/4.5 Critical Thinking - Pizza Takeout.md
@@ -15,11 +15,11 @@ I would start with open-ended questions to get a gist of what the owner would li
 * What do you want me to build? Is this an entire website that requires a design, a section of a website, mobile app, or maybe as obscure as a command line tool?
 * What types of products do you offer? The shop would most likely sell food beyond pizza like breadsticks and pasta. 
 * What types of services do you offer? The shop might offer services beyond takeout like rush ordering, bulk orders, and even delivery.
-* How will payment be collected? Options include paying beforehand or at pickup. Different methods include cash, and perhaps a system to validate credit cards and gift vouchers online.
 
-From there I would dive into specifics.
+From there I would dive into specifics, asking questions based on what the shop owner brings up.
 
 * How would each product be customizable? This would help me gather the variables that I would need to create. For instance, pizza can be customized by toppings,  crust,  size, etc.
 * I would also ask for functionality as well. There could also be templating system with different pizzas to choose from, and perhaps a “duplicate” button if a user can order multiple pizzas at once. 
 * How is each service customizable? A calendar would help a user schedule bulk orders, and perhaps pricing tiers for rush ordering that would bump the pizza to a specific position on a queue.
+* How will payment be collected? Options include paying beforehand or at pickup. Different methods include cash, and perhaps a system to validate credit cards and gift vouchers online.
 * What information would you need depending on the type of service chosen? Takeout orders would probably just need only a payment method and a name, while the delivery option would require a customer's address.
