Clarification about bot

--- a/Week 7 - Strings and Methods/7.4a Lab - Magpie 1 Chatbot.md
+++ b/Week 7 - Strings and Methods/7.4a Lab - Magpie 1 Chatbot.md
@@ -10,7 +10,7 @@ Have several conversations with your chatbot and answer the following questions:
 
   [http://www.pandorabots.com/pandora/talk?botid=e69b9c750e345dfe](http://www.pandorabots.com/pandora/talk?botid=e69b9c750e345dfe)
 
-  (This is my bot!)
+  (This is my bot I created for a science project a few years ago!)
 
 2. How does it respond to "where do you come from?"
 
