Update 9.2 Coder Chat: Using While or For.md

--- a/Week-9-Control-Statements-Revisited/9.2 Coder Chat: Using While or For.md
+++ b/Week-9-Control-Statements-Revisited/9.2 Coder Chat: Using While or For.md
@@ -8,3 +8,5 @@
 I find both the *while* and *for* loops to be very similar, and it really comes down to personal preference.
 
 I prefer to use *while* loops when there is a condition that needs to be met and I don't know how many times the loop needs to be run, and *for* loops when I know how many times I need to loop through a set of functions.
+
+Logical operators bring a sense of logic to computers and makes programs easier to create. It also helps with efficency by repeating tasks without having to rewrite the same code a bunch of times.
