Added student responses

--- a/Week 9 - Control Statements Revisited/9.2 Coder Chat: Using While or For.md
+++ b/Week 9 - Control Statements Revisited/9.2 Coder Chat: Using While or For.md
@@ -10,3 +10,20 @@ I find both the *while* and *for* loops to be very similar, and it really comes 
 I prefer to use *while* loops when there is a condition that needs to be met and I don't know how many times the loop needs to be run, and *for* loops when I know how many times I need to loop through a set of functions.
 
 Logical operators bring a sense of logic to computers and makes programs easier to create. It also helps with efficency by repeating tasks without having to rewrite the same code a bunch of times.
+
+## G's Response
+
+I like how you stated that while statements should be used when one isn't sure of an amount of times it needs to occur whereas the if statement is more finite. Simple and effective. Great post!
+
+## Z's Response
+
+I agree with you that while and for loops are very similar to each other. Good post!
+
+## R's Response
+
+I completely agree with your response, anything that i didn't put into my own, you cover.
+
+## M's Response
+
+Logic operators definately bring a better sense of logic to computers. I too prefer the while loop, simply because it was the one I learned first. They both accomplish the same tasks, the for loop is just more compact.
+
