--- a/Week 9 - Control Statements Revisited/9.4 Program It - Magpie 4.md
+++ b/Week 9 - Control Statements Revisited/9.4 Program It - Magpie 4.md
@@ -18,9 +18,11 @@ You confuse me.
 
 ## Alter the code
 
-- Would you really be happy if you had *something*?
+I want *something*.
+> Would you really be happy if you had *something*?
 
-- Why do you *something* me?
+I *something* you.
+> Why do you *something* me?
 
 ## Investigate
 
