--- a/Week 10 - External Data and the StringTokenizer/10.4a Propose It - Guessing Game.md
+++ b/Week 10 - External Data and the StringTokenizer/10.4a Propose It - Guessing Game.md
@@ -2,13 +2,13 @@
 
 ## Problem
 
-In a game of guessing numbers, one person says, â€œIâ€™m thinking of a number between 1 and 100.â€ The other person guesses â€œ50.â€ The first person replies, â€œNo, the number is less.â€ The second person then guesses â€œ25,â€ and so on, until she guesses correctly. Write a program that plays this game. The computer knows the number (a random number between 1 and 100) and the user is the guesser. At the end of the game, the computer displays the number of guesses required by the user to guess the number correctly.
+In a game of guessing numbers, one person says, I'm thinking of a number between 1 and 100. The other person guesses 50. The first person replies, No, the number is less. The second person then guesses 25, and so on, until she guesses correctly. Write a program that plays this game. The computer knows the number (a random number between 1 and 100) and the user is the guesser. At the end of the game, the computer displays the number of guesses required by the user to guess the number correctly.
 
 ## Solution
 
 - Create integer variable *ActualNumber*, set to 0
 - While variable *ActualNumber* is less than 1 or greater than 100
-     - Print "Iâ€™m thinking of a number between 1 and 100."
+     - Print "I'm thinking of a number between 1 and 100."
 	 - Asks for an integer input
 	 - Store the input as *ActualNumber*
 	 - (This loop serves as validation)
