Match format of other coder chats

--- a/Week 10 - External Data and the StringTokenizer/10.2 Coder Chat - StringTokenizer.md
+++ b/Week 10 - External Data and the StringTokenizer/10.2 Coder Chat - StringTokenizer.md
@@ -3,11 +3,26 @@
 - What is your opinion about using the StringTokenizer instead of the
    method split() of the String Class?  Look at the Java Doc API for more.
 - What methods of the StringTokenizer
-   class you do not understand, either because of the parameters or the
-   returned values?
+   class you do not understand, either because of the parameters or the returned values?
 - How does the StringTokenizer help in the
    manipulation of text files?
+
+## My Response
 
 I view StringTokenizer as an extension of the split method, where it splits spaces into an array of variables. It can make extracting a specific set of words or characters much easier.
 
 At first, the documentation provided so much information that it was hard to differentiate between the important information and the not-so-important information but after looking at the code samples, I had a good grasp on StringTokenizer. I was surprised to find out that StringTokenizer has been classified as a legacy class because I can find many use cases for for this method.
+
+## R's Reply
+
+Although it is simpler than the split method do you think that its limitations make it better or worse?
+
+By limitations I mean the class's inability to distinguish between identifiers, numbers, and quotes strings. They also don't recognize and skip comments
+
+## V's Response to R's Reply
+
+I would have to say that it depends on the use case. There are definitely ways to get around that limitation, but I would have to assume that most people who use StringTokenizer want to parse the same type of data (as in generating a graph from a list of doubles.)
+
+## S's Reply
+
+You're right, it can make extracting characters much easier, and it also becomes easy to manipulate text files this way. I thought the documentation was complicated too, but it is much easier after you try the program it activity and see how the code works.
