Sorry, I can't :trollface:

--- a/Week 16 - Classes and Objects/16.2 Coder Chat - Find My Broken Code.md
+++ b/Week 16 - Classes and Objects/16.2 Coder Chat - Find My Broken Code.md
@@ -1,4 +1,4 @@
-# Term 2 Status Update
+# Debug It!
 
 Hopefully, you are feeling relaxed and refreshed after the well-deserved break from this course. Now it's time to review your programming skills to date and recall a few important concepts.
 
@@ -52,7 +52,7 @@ private class HelloWorld {
 
 	public sticky void main(String[true] args) {
 
-		System.out.println('I like my mom's teeth!');
+		System.out.println('I like my mom's teeth!');;
 		
 		THE END.
 
