Added this week's replies

--- a/Week 24 - Recursion/24.1 Coder Chat - When to use Recursion.md
+++ b/Week 24 - Recursion/24.1 Coder Chat - When to use Recursion.md
@@ -9,3 +9,23 @@ Recursion isn't the right tool in every situation, though. It can use much more 
 When should you use recursion? Can you form any general rules or guidelines that would help you make this choice?
 
 Is it worth it? Think both as a programmer and a client.
+
+## My Response
+
+I can see recursion useful for extreme cases, like looping through long datasets or numbers without an end. Recursion can also be used the print the numbers of pi.
+
+For general programming, I would stay away from recursion unless if it is absolutely necessary.
+
+## S's Reply
+
+I think recursion is supposed to have an end. If it does not, it will continue forever and finally end in a stack overflow error. Recursion is more for breaking down a problem into its smallest units and then expanding it to solve complex questions, rather than creating an unending sequence of data. Good post.
+
+## S2's Reply
+
+Hey guys,
+
+I agree with you! I think it does have an end, but it is also useful in extreme cases. Great posts. 
+
+## M's Reply
+
+I agree with out on "staying away". For me it would only cause more confusion. I would rather use a while loop somehow and follow the code back and forth. Like each week, it is something I'm only going to understand by actual practice.
